--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
+/*FIXOS*/
+
+body {
+  font-family: "century gothic";
+  background-color: #5584AC;
+  background-image: url("./imagens/bcg.jpg"); 
+  background-size: cover;
+}
+
+nav {
+  background-color: #22577E;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.logo {
+  width: 150px;
+  padding-left: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.links {
+  color: #F6F2D4;
+  text-decoration: none;
+  margin-left: 30px;
+  margin-top: 25px;
+}
+
+footer {
+  text-align: center;
+  background-color: #22577E;
+  border-radius: 5px;
+  color: #F6F2D4;
+}
+
+/*HOME PAGE*/
+
+.formulario {
+  background-color: #22577E;
+  text-align: center;
+  width: 40%;
+  height: auto;
+  margin-left: 30%;
+  border-radius: 10px;
+  padding-top: 2px;
+  color: #F6F2D4;
+}
+
+/*DESTINOS E PROMOÇÕES*/
+
+td {
+  width: 20%;
+  text-align: center;
+  color: #F6F2D4;
+}
+
+.destinos {
+  background-color: #5584AC;
+  border-radius: 20px;
+}
+
+.locais {
+  width: 200px;
+  height: 150px;
+  padding-left: 40px;
+  padding-top: 10px;
+}
+
+/*CONTATO*/
+
+.contatos {
+  height: 355px;
+}
+
+.contato {
+  color: #000;
 }
